--- a/css/extractor.css
+++ b/css/extractor.css
@@ -31,6 +31,19 @@
     font-family: Roboto, Noto, Arial, sans-serif;
     text-align: center;
 }
+.bt-injected-device em {
+    display: inline-block;
+    padding: 2px 10px;
+    border-radius: 10px;
+    font-style: normal;
+    font-size: 10px;
+    background: #5D00FF;
+    position: absolute;
+    right: 10px;
+    top: 13px;
+    color: #fff;
+    line-height: normal;
+}
 .bt-injected-device a,
 .bt-injected-overlay div {
     text-align: left;
@@ -68,6 +81,8 @@
     text-transform: capitalize;
     font-size: 12px;
     border: none;
+    position: relative;
+    line-height: normal;
 }
 .bt-injected-device a:hover {
     background: #eee;
