--- a/css/options.css
+++ b/css/options.css
@@ -169,3 +169,24 @@ h5 em,
 	color: #5D00FF;
 	background-color: #ECF0F1;
 }
+
+#history {
+	padding: 20px 0;
+}
+#history li {
+	margin-bottom: 20px;
+}
+#history li a {
+	display: block;
+	color: #fff;
+	font-size: 16px;
+	margin-bottom: 10px;
+}
+#history li span {
+	margin: 0;
+	padding: 2px 0;
+	display: inline-block;
+	float: left;
+	font-size: 12px;
+	color: rgba(255, 255, 255, .75);
+}
